seaqt/QtScript/gen_qscriptclasspropertyiterator.h

class QScriptClassPropertyIterator;
class QScriptString;
class QScriptValue;
typedef struct QScriptClassPropertyIterator QScriptClassPropertyIterator;
typedef struct QScriptString QScriptString;
typedef struct QScriptValue QScriptValue;
QScriptValue* QScriptClassPropertyIterator_object(const QScriptClassPropertyIterator* self);
bool QScriptClassPropertyIterator_hasNext(const QScriptClassPropertyIterator* self);
void QScriptClassPropertyIterator_next(QScriptClassPropertyIterator* self);
bool QScriptClassPropertyIterator_hasPrevious(const QScriptClassPropertyIterator* self);
void QScriptClassPropertyIterator_previous(QScriptClassPropertyIterator* self);
void QScriptClassPropertyIterator_toFront(QScriptClassPropertyIterator* self);
void QScriptClassPropertyIterator_toBack(QScriptClassPropertyIterator* self);
QScriptString* QScriptClassPropertyIterator_name(const QScriptClassPropertyIterator* self);
unsigned int QScriptClassPropertyIterator_id(const QScriptClassPropertyIterator* self);
int QScriptClassPropertyIterator_flags(const QScriptClassPropertyIterator* self);
void QScriptClassPropertyIterator_delete(QScriptClassPropertyIterator* self);